wip simd matrix multiplication